[tool.poetry]
name = "subpulse"
version = "2021.05-alpha.0"
description = "CHIME/FRB Backend - subpulse"
authors = ["Shiny Brar <charanjotbrar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
click = "^7.1.0"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
stingray = "^0.2"
numba = "^0.53.1"
quantumrandom = "^1.9.0"
chime-frb-api = "^2021.5.28"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mkdocs-material = "^5.5.3"
pre-commit = "^2.6.0"
black = "^21.6b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
